improved spacing in feed info text over cards. Fixed email and listen icon position in menus

--- a/libsrc/scss/cards.scss
+++ b/libsrc/scss/cards.scss
@@ -72,7 +72,7 @@
         font-weight: bold;
         text-align: right;
         width: 120px;
-        div { background-color: $color_highlight; margin: 1px; display: inline; padding: 0 5px; }
+        div { background-color: $color_highlight; margin: 0; display: inline-block; padding: 0px 2px; }
         &.create div { background-color: white; }
     }
 }
